# car-simulator

./: .gitmodules  LICENSE  README.md  vehicle_data_log.csv
car_model/car_simulator/: CMakeLists.txt  package.xml
car_model/car_vehicle_interface/: CMakeLists.txt  nodelet_plugins.xml  package.xml
car_model/car_vehicle_interface/include/car_vehicle_interface/: car_vehicle_interface.h
car_model/car_vehicle_interface/src/nodelets/: car_vehicle_interface.cpp
car_model/spawn_car/: CMakeLists.txt
car_model/spawn_car/launch/: mevi_description.launch  spawn_mevi.launch
car_model/spawn_car/model/mevi/urdf/: mevi.gazebo  mevi.urdf  mevi.xacro  mevi_base.urdf  mevi_description.urdf  mevi_description.urdf.xacro  vehicle_properties.urdf.xacro
car_model/spawn_car/model/mevi/urdf/bases/: bases.urdf  mevi_body.urdf.xacro
car_model/spawn_car/model/mevi/urdf/sensors/: camera.urdf.xacro  vlp-16.urdf.xacro
car_model/spawn_car/model/mevi/urdf/wheels/: mevi_suspension.urdf.xacro
car_model/spawn_car/rviz/: mevi.rviz
car_model/spawn_car/src/: odometry_publisher.cpp  spawn_car_node.cpp
car_model/spawn_car/world/: car.world
car_simulator/: CMakeLists.txt  package.xml
car_simulator/launch/: mevi_xacro.launch  spawn_formula.launch  spawn_mevi.launch  spawn_mevi.launch.back  spawn_urban.launch
example_node/: CMakeLists.txt  package.xml
example_node/include/example_node/: odom.h  pid_controller.h  publisher.h
example_node/launch/: example_node.launch
example_node/src/: main_node.cpp  odom.cpp  pid_controller.cpp  publisher.cpp  pure_pursuit.py
gps_sensor_kf/: CMakeLists.txt  package.xml
msgs/: CMakeLists.txt  package.xml
msgs/msg/: carCMD.msg
plugins/car_vehicle_interface/: CMakeLists.txt  nodelet_plugins.xml
plugins/car_vehicle_interface/include/car_vehicle_interface/: car_vehicle_interface.h
plugins/car_vehicle_interface/launch/: car_nodelet.launch
plugins/car_vehicle_interface/src/nodelets/: car_vehicle_interface.cpp  car_vehicle_interface_node.cpp
spawn_car/: CMakeLists.txt  package.xml
spawn_car/config/: controller.yaml
spawn_car/include/spawn_car/: odometry_publisher.h  twist_to_joint.h  utils.h
spawn_car/model/formula/config/: controller.yaml
spawn_car/model/formula/meshes/: F1_2023_halo_body.stl  F1_2023_halo_livery.stl  F1_2023_halo_wheel.stl
spawn_car/model/formula/urdf/: formula_description.urdf.xacro  vehicle_properties.urdf.xacro
spawn_car/model/formula/urdf/bases/: formula_body.gazebo.xacro  formula_body.urdf.xacro
spawn_car/model/formula/urdf/sensors/: _d435.urdf.xacro  camera.urdf.xacro  realsense2.urdf.xacro  vlp-16.urdf.xacro
spawn_car/model/formula/urdf/wheels/: formula_suspension.urdf.xacro  suspension.gazebo.xacro
spawn_car/model/mevi/urdf/: sd_twizy.urdf  vehicle_properties.urdf.xacro
spawn_car/model/mevi/urdf/bases/: mevi_body.gazebo.xacro  mevi_body.urdf.xacro
spawn_car/model/mevi/urdf/sensors/: camera.urdf.xacro
spawn_car/model/mevi/urdf/wheels/: mevi_suspension.urdf.xacro  suspension.gazebo.xacro
spawn_car/model/urban/config/: controller.yaml
spawn_car/model/urban/meshes/: Car_body_transformed.stl  body_mevi.stl  body_mevi_with_seat.stl  c270.dae  c270.fbx  c270.stl  cc270.stl  mevi_tire.stl  tire_mevi.stl
spawn_car/model/urban/urdf/: materials.urdf.xacro  urban_description.urdf.xacro  vehicle_properties.urdf.xacro
spawn_car/model/urban/urdf/bases/: urban_body.gazebo.xacro  urban_body.urdf.xacro
spawn_car/model/urban/urdf/sensors/: _d435.urdf.xacro  camera.urdf.xacro  gps.urdf.xacro  imu.urdf.xacro  vlp-16.urdf.xacro
spawn_car/model/urban/urdf/wheels/: suspension.gazebo.xacro  urban_suspension.urdf.xacro
spawn_car/rviz/: formula.rviz  mevi_xacro.rviz  urban.rviz  vlp-16.rviz
spawn_car/src/: twist_to_joint.cpp  utils.cpp
spawn_car/world/: simple_city.world
