<package format="3">
  <name>example_node</name>
  <version>0.0.0</version>
  <description>example node for mevi simulator</description>
  <maintainer email="hifzhil12@gmail.com"></maintainer>
  <license>TODO</license>
  <author email="hifzhil12@gmail.com"></author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>hector_gazebo_plugins</depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>car_msgs</build_depend>
  
  <!-- <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend> -->
  <exec_depend>libpcl-all</exec_depend>
  <export></export>
</package>